# loan-shark-escape-env

./: .dockerignore  .env.example  .gitignore  Dockerfile  PITCH_DECK.md  README.md  SHOWCASE_VISUALS.md  SUBMISSION.md  __init__.py  app.py  client.py  debug_env.py  demo.ipynb  demo.py  grader.py  inference.py  log_failures.py  models.py  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt  run_tests.py  test_all.py
hf_deploy/: Dockerfile  models.py
hf_deploy/server/: app.py
hf_deploy/tasks/: lse-easy.json
loan_shark_escape_env.egg-info/: PKG-INFO
server/: app.py  environment.py
tasks/: easy.json  hard.json  lse-easy.json  lse-hard.json  lse-medium.json  medium.json
tests/: conftest.py  test_api.py  test_grader.py
