[project]
name = "loan-shark-escape-env"
version = "0.1.0"
description = "Loan Shark Escape OpenEnv environment for Meta Hackathon"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pytest",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["grader.py"]
